--- a/about.html
+++ b/about.html
@@ -31,9 +31,10 @@
                 <a href="CreditsHomePage.html" target="_blank">HOME PAGE CREDITS</a>
                 <a href="CreditsBreadPage.html" target="_blank">BREADS PAGE CREDITS</a>
                 <a href="CreditsCakePage.html" target="_blank">CAKES PAGE CREDITS</a>
-                <a href="#TOPPINGSCREDITS" target="_blank">TOPPINGS PAGE CREDITS</a> 
+                <a href="CreditsToppingsPage.html" target="_blank">TOPPINGS PAGE CREDITS</a> 
             </div>
-            <br><br><br>
+            <br><p>Not all of the recipe tiles have active recipe pages.<br><br>Also, the "Enter email" in the footer is not active, so nothing happens if an email is entered in the "Enter email" textbox.<br><br>And, the social media icons are for formatting purposes and do not link to social media sites.</p>
+            <br><br>
         </div>
     </main>
     <footer>
