--- a/brPdoughnuts.html
+++ b/brPdoughnuts.html
@@ -67,7 +67,7 @@
             <p class="rec-adapted-padding"><br>Yield: 12 baked doughnuts<br><br><strong>Recipe from King Arthur Baking Company</strong>
             </p>
             <p class="rec-link-padding">
-                Original Recipe Link: <a href="https://www.kingarthurbaking.com/recipes/pumpkin-cake-doughnuts-recipe" class="recipe-link" target="_blank">https://www.kingarthurbaking.com/recipes/pumpkin-cake-doughnuts-recipe</a><br><br><strong>Photos from King Arthur Baking Company</strong>                
+                Original Recipe Link: <a href="https://www.kingarthurbaking.com/recipes/pumpkin-cake-doughnuts-recipe" class="recipe-link" target="_blank">https://www.kingarthurbaking.com/recipes/pumpkin-cake-doughnuts-recipe</a><br><br><strong>Photograph from King Arthur Baking Company</strong>                
             </p>
         </div>
     </div>
