--- a/cake.html
+++ b/cake.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="breads-space">
                         <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
+                            <a href="#noLink" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/LemonBlissCake.jpg" alt="No Knead Bread Image and Recipe Link" loading="lazy">
                                 <p class="recipe-name">Lemon Bliss Cake</p>
                             </a>
@@ -56,7 +56,7 @@
                 <div class="breads-grid">
                     <div class="breads-space">
                         <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
+                            <a href="#noLink" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/GermanChocolateCake.png" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">German Chocolate Cake</p>
                             </a>
@@ -64,7 +64,7 @@
                     </div>
                     <div class="breads-space">
                         <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
+                            <a href="#noLink" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/GFAlmondBundt.jpg" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">Gluten-Free Almond Bundt Cake</p>
                             </a>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="breads-space">
                         <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
+                            <a href="#noLink" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/BlueberryCake.jpg" alt="No Knead Bread Image and Recipe Link" loading="lazy">
                                 <p class="recipe-name">Blueberry Breakfast Cake</p>
                             </a>
@@ -82,7 +82,7 @@
                 <div class="breads-grid">
                     <div class="breads-space">
                         <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
+                            <a href="#noLink" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/ChocolateBundt.jpg" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">Chocolate Fudge Bundt Cake</p>
                             </a>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="breads-space">
                         <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
+                            <a href="#noLink" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/ClassicBirthdayCake.jpg" alt="No Knead Bread Image and Recipe Link" loading="lazy">
                                 <p class="recipe-name">Classic Birthday Cake</p>
                             </a>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="breads-space">
                         <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
+                            <a href="#noLink" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/RaspberryTeaCake.jpg" alt="No Knead Bread Image and Recipe Link" loading="lazy">
                                 <p class="recipe-name">Raspberry Tea Cake</p>
                             </a>
@@ -108,7 +108,7 @@
                 <div class="breads-grid">
                     <div class="breads-space">
                         <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
+                            <a href="#noLink" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/RaspberryChocolateCake.png" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">Raspberry Chocolate Cake</p>
                             </a>
@@ -116,7 +116,7 @@
                     </div>
                     <div class="breads-space">
                         <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
+                            <a href="#noLink" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/GFLavaCake.jpg" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">Gluten-Free Lava Cakes</p>
                             </a>
@@ -124,7 +124,7 @@
                     </div>
                     <div class="breads-space">
                         <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
+                            <a href="#noLink" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/SummerSpoonCake.jpg" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">Summer Spoon Cake</p>
                             </a>
