--- a/tCinnamonSugar.html
+++ b/tCinnamonSugar.html
@@ -23,7 +23,7 @@
                 <h3 class="rec-rec-by">RECIPE BY PJ HAMEL<br>from King Arthur Baking Company</h3>
             </div>
             <div class="categories-header-image">
-                <img src="./ImagesFinal/RSourdoughTw.png" alt="Sourdough bread image">
+                <img src="./ImagesFinal/pdMTw.png" alt="Sourdough bread image">
             </div>
         </div>
     </header>
@@ -45,7 +45,7 @@
             <p class="rec-adapted-padding"><br>Yield: 2 1/2 cups<br><br><strong>Recipe from King Arthur Baking Company</strong>
             </p>
             <p class="rec-link-padding">
-                Original Recipe Link: <a href="https://www.kingarthurbaking.com/recipes/doughnut-muffins-recipe" class="recipe-link" target="_blank">https://www.kingarthurbaking.com/recipes/doughnut-muffins-recipe</a>
+                Original Recipe Link: <a href="https://www.kingarthurbaking.com/recipes/doughnut-muffins-recipe" class="recipe-link" target="_blank">https://www.kingarthurbaking.com/recipes/doughnut-muffins-recipe</a><br><br><strong>Photograph from King Arthur Baking Company</strong>     
             </p>
         </div>
     </div>
