--- a/tStrawberryJam.html
+++ b/tStrawberryJam.html
@@ -23,7 +23,7 @@
                 <h3 class="rec-rec-by">RECIPE BY TASTE OF HOME TEST KITCHEN<br>from <i>The Taste of Home Cookbook</i></h3>
             </div>
             <div class="categories-header-image">
-                <img src="./ImagesFinal/RSourdoughTw.png" alt="Sourdough bread image">
+                <img src="./ImagesFinal/mpJam.png" alt="Sourdough bread image">
             </div>
         </div>
     </header>
