--- a/CreditsHomePage.html
+++ b/CreditsHomePage.html
@@ -32,7 +32,7 @@
                 <a href="CreditsHomePage.html" target="_blank">HOME PAGE CREDITS</a>
                 <a href="CreditsBreadPage.html" target="_blank">BREADS PAGE CREDITS</a>
                 <a href="CreditsCakePage.html" target="_blank">CAKES PAGE CREDITS</a>
-                <a href="#TOPPINGSCREDITS" target="_blank">TOPPINGS PAGE CREDITS</a> 
+                <a href="CreditsToppingsPage.html" target="_blank">TOPPINGS PAGE CREDITS</a> 
             </div>
             <br><br>
             <div class="about-credits-container">
